# pyceos

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
pyceos/: __init__.py  __main__.py  attitude_record.py  ceos.py  cli.py  codes.py  data_format.py  data_quality_record.py  data_set_summary_record.py  data_set_summary_record_sensor_specific_alos.py  enums.py  imagery_options_record.py  map_projection_record.py  platform_position_record.py  radiometric_record.py  types.py
pyceos/cli/: __init__.py  dump.py  slice.py
pyceos/custom/: ascii_float.py  ascii_int.py
pyceos/records/: attitude_record.py  data_quality_summary_record.py  platform_position_record.py
pyceos/records/data_set_summary_record/: __init__.py  data_set_summary_record.py  sensor_specific.py
pyceos/records/facility_related_data_record/: __init__.py
pyceos/records/facility_related_data_record/jaxa/: __init__.py
pyceos/records/file_descriptor_record/: __init__.py  file_pointer.py  sar_leader.py  text.py  volume_descriptor.py
pyceos/records/radiometric_record/: __init__.py  alos.py
src/: attitude_record.ksy  ceos.ksy  data_quality_record.ksy  data_set_summary_record.ksy  data_set_summary_record_sensor_specific_alos.ksy  imagery_options_record.ksy  map_projection_record.ksy  platform_position_record.ksy  radiometric_record.ksy
tests/: test_ceos.py  test_image_annotation.py  test_types.py
tests/data/records/: data_quality_summary.json  data_set_summary.json  facility_related_jaxa_calibration.json  platform_position.json  sar_leader_file_descriptor.json
(+3 files in other folders)
