[tool.poetry]
name = "pyceos"
version = "0.1.0"
description = "Python library and tool for reading Committee on Earth Observation Satellites (CEOS) files"
authors = ["Rohan Weeden <reweeden@alaska.edu>"]

[tool.poetry.scripts]
pyceos = "pyceos.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
construct = "^2.10.68"
jmespath = { version = "^1.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-assert-utils = "^0.3.1"

[tool.poetry.extras]
# Used by the CLI
jmespath = ["jmespath"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# isort config
[tool.isort]
profile = "black"
